# sokoban_base

./: README.md  pyproject.toml  requirements.txt
analyzers/: base_actions.py  definite_deadlocks.py  explain.py  heuristic_warnings.py  json_utils.py  solvability.py  tool_dispatch.py  tool_schemas.py  tools.py
core/: actions.py  comparator.py  env.py  serializer.py  state.py
datasets/: deadlock_dataset_with_gt.json  test_1.json  test_2.json
evaluation/: runner.py
llm_protocol/: claude_client.py  client_factory.py  deepseek_client.py  function_call_runner.py  gemini_client.py  openai_client.py  parser.py  prompt_builder.py  task_inference.py
scripts/: main.py  run_all_tasks_batch.py
tasks/: assignment_tasks.py  base.py  box_priority_tasks.py  deadlock_tasks.py  decomposition_tasks.py  horizon_choice_tasks.py  legality_tasks.py  phase_tasks.py  subgoal_discovery_tasks.py  subproblem_ordering_tasks.py  transition_tasks.py
tasks/utils/: dataloader.py  deadlock_case_utils.py  generate_batch_tasks.py  generate_deadlock_tasks.py  generate_order_match_tasks.py  generate_planning_tasks.py  planning_case_utils.py  planning_ground_truth.py  summarize_results.py  task_case_utils.py
